:lipstick: Fix the overlapping between text and icon

--- a/src/app/details/common/publication/publication.component.scss
+++ b/src/app/details/common/publication/publication.component.scss
@@ -35,7 +35,7 @@
     flex-direction: column;
     align-items: flex-end;
     padding: 0;
-    gap: 4px;
+   // gap: 4px;
     min-width: fit-content;
     height: 20px; // Fake height smaller than reality to ignore this section height (better looking)
   }
